# AIMATH

./: .gitignore  LICENSE  README.md  aimath.bat  aimath.sh  demo.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_anti_patterns.py  test_discover_orion_theories.py  test_proof_assistant.py  test_theses.py
aimath/: __init__.py  cli.py
aimath/core/: __init__.py  engine.py
aimath/explanation/: anti_patterns.py  difficulty_adapter.py  expansion_engine.py  explanation_engine.py
aimath/parsers/: latex_parser.py  math_parser.py  natural_language.py  natural_language_parser.py
aimath/proof_assistant/: prover.py  verifier.py
aimath/solvers/: calculus_steps.py  conjecture_tester.py  constant_recognizer.py  contour_integration.py  differential_equations.py  feynman_trick.py  hybrid_integrator.py  integral_database.py  linear_algebra.py  llm_solver.py  numerical_solver.py  optimization.py  pde_solver.py  solver_base.py
aimath/verification/: __init__.py  confidence.py  consensus.py  counterexample.py  substitution.py  verifier.py
config/: settings.yaml
examples/: demo.py
mathclaw/: README.md  __init__.py  __main__.py  pyproject.toml
mathclaw/api/: __init__.py  config.py  providers.py
mathclaw/cli/: __init__.py  mathclaw_cli.py
mathclaw/discovery/: __init__.py  conjecture_generator.py  discovery_engine.py  knowledge_exporter.py  theorem_store.py  verification_bridge.py
mathclaw/evolution/: __init__.py  domain_selector.py  prompt_mutator.py  strategy_store.py  success_tracker.py
mathclaw/protection/: __init__.py  checksum_guardian.py  frozen_registry.py  health_checker.py  rollback_manager.py
mathclaw/security/: __init__.py  input_validator.py  rate_limiter.py  safe_parser.py  sandbox.py
src/: __init__.py
src/core/: types.py
src/explanation/: __init__.py  expansion_engine.py  explanation_engine.py  quality_checker.py
src/parsers/: __init__.py  expression_tree.py  math_parser.py
src/proof_assistant/: __init__.py  axioms.py  inference.py  logic.py  tactics.py
src/solvers/: __init__.py  solver_registry.py  symbolic_solver.py
src/verification/: consensus.py  counterexample.py  formal_prover.py  substitution.py  verifier.py
tests/: test_anti_patterns.py  test_core.py  test_discover_orion_formal_proofs.py  test_quality.py  test_verification.py
