[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimath"
version = "1.0.0"
description = "AI Math Verification & Discovery Tool - Rigorous mathematical verification with anti-hallucination mechanisms"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jovan", email = "jovan@example.com"}
]
keywords = [
    "mathematics",
    "verification",
    "proof-assistant",
    "theorem-prover",
    "symbolic-math",
    "anti-hallucination",
    "education",
    "AI",
    "math-solver"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "sympy>=1.12",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "z3-solver>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
ml = [
    "scikit-learn>=1.3.0",
]
all = [
    "aimath[dev,ml]",
]

[project.scripts]
aimath = "aimath.cli:main"

[project.urls]
Homepage = "https://github.com/jovanSAPFIONEER/AIMATH"
Documentation = "https://github.com/jovanSAPFIONEER/AIMATH#readme"
Repository = "https://github.com/jovanSAPFIONEER/AIMATH"
Issues = "https://github.com/jovanSAPFIONEER/AIMATH/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aimath*"]

[tool.setuptools.package-data]
aimath = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
